projects/microservices/ingress-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-java
            port:
              number: 8080
      - path: /currency-exchange/
        pathType: Prefix
        backend:
          service:
            name: currency-exchange
            port:
              number: 8000     
      - path:  /currency-conversion/
        pathType: Prefix
        backend:
          service: 
            name: currency-conversion
            port:
              number: 8100
      - path:  /hello-java
        pathType: Prefix
        backend:
          service: 
            name: hello-java
            port:
              number: 8080
  ingressClassName: nginx
